<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="addNewToken">Add New Token</string>
    <string name="scanNewToken">Scan QR Token</string>
<string name="noTokens">No Tokens Defined</string>
<string name="app_name">Android Token</string>
<string name="menu_add_token">Add Token</string>
<string name="menu_pin_change">Change PIN</string>
<string name="menu_pin_remove">Remove Pin</string>
<string name="menu_delete_token">Delete Token</string>
<string name="tokenType">Token Type</string>
<string name="tokenName">Name</string>
<string name="tokenSerial">Serial No</string>
<string name="tokenOtp">OTP Length</string>
<string name="tokenTimeStep">Time Step</string>
<string name="btnAddStep2">Next &gt;</string>
<string name="tokenTypeSpinnerPrompt">Select Token Type</string>
<string name="tokenOtpSpinnerPrompt">Select OTP Length</string>
<string name="tokenTimeStepSpinnerPrompt">Select Time Step</string>
<string name="tokenSeedMethod">Token Seed Method</string>
<string name="rbSeedManual">Direct Seed Entry</string>
<string name="rbSeedRandom">Generate Random Seed</string>
<string name="rbSeedPassword">Seed from Password</string>
<string name="tokenSeed">Token Seed Value</string>
<string name="tokenAddComplete">Complete</string>
<string name="dialogPositive">OK</string>
<string name="dialogNegative">Cancel</string>
<string name="tokenAddDialogNoName">Token Name is Required</string>
<string name="tokenAddDialogNoSerial">Token Serial is Required</string>
<string name="tokenAddDialogNoSeed">Token Seed is Required</string>
<string name="tokenAddDialogInvalidSeedTooShort">Token Seed is weak, the recommended minimum is 128 bits. The seed enter contains %s bits. Create the token anyway?</string>
<string name="tokenAddDialogInvalidSeedTooShort2">Token Seed is too short</string>
<string name="tokenAddDialogInvalidSeedNotHex">Token Seed is Invalid, only enter a-f, A-F or 0-9 characters.</string>
<string name="tokenrowtextserialcaption">S/N:</string>
<string name="pinChangeExistingPin">Enter Existing PIN</string>
<string name="pinChangeNew1">New PIN</string>
<string name="pinChangeNew2">Confirm PIN</string>
<string name="pinChangeSubmit">Save</string>
<string name="pinAlertInvalidPin">Existing PIN is invalid</string>
<string name="pinAlertNewPinsDifferent">The new PINs are not the same</string>
<string name="pinAlertNewPinBlank">New PIN is required</string>
<string name="pinRemoveExistingPin">Enter Existing PIN</string>
<string name="pinRemoveSubmit">Remove</string>
<string name="mainLogin">Login</string>
<string name="otpDialogTitle">One Time Password</string>
<string name="tokenSeedFormat">Input Format</string>
<string name="menu_scan">Scan QR</string>
<string name="otpAuthUrlInvalid">otpauth url is not valid</string>
<string name="otpAuthTokenTypeInvalid">Invalid token type</string>
<string name="otpAuthMissingCounterParameter">The counter parameter is required when creating an HOTP token</string>
<string name="cancel">Cancel</string>
<string name="install">Install</string>
<string name="install_zxing_title">Install Barcode Scanner?</string>
<string name="install_zxing_caption">To read barcode you need need install the ZXING barcode scanner app.</string>
<string name="confirmDelete">Are you sure you want to delete this token?</string>
<string name="toastDeleted">Token Deleted</string>
<string name="toastAdded">Token Added</string>
<string name="toastInvalidQr">Invalid QR code</string>
<string name="tokenAddDialogInvalidSeedConvertion">Unable to convert the supplied value to a hex seed</string>
<string name="tokenAddDialogUnableToSwitchFormat">Unable to switch input format, value entered is invalid</string>
</resources>
