<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentLayout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:visibility="visible">
        
    <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainList"
    android:visibility="gone">    
	    <ListView android:id="@+id/android:list"  
	    			android:layout_width="fill_parent" 
	    			android:layout_height="wrap_content">
	    </ListView>

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/android:empty">

			<TextView
				android:id="@+id/emptyCaption"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/noTokens"
				android:textSize="20sp"
				android:layout_marginTop="10sp"
				android:layout_marginLeft="10sp"/>

			<Button
				android:text="@string/addNewToken"
				android:id="@+id/addButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="30sp"
				android:layout_gravity="center_horizontal"/>

			<Button
				android:text="@string/scanNewToken"
				android:id="@+id/scanButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="30sp"
				android:layout_gravity="center_horizontal"/>

		</LinearLayout>

	</LinearLayout>
	
	<LinearLayout 
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainPin"
    android:visibility="gone"
    android:padding="5sp"> 
    
    	<TextView  
			android:id="@+id/mainPinText"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/pinChangeExistingPin"
		    android:layout_marginTop="5sp"
		    android:textSize="20dip"		    
		    />
		    
		 <EditText
			android:id="@+id/mainPinEdit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="18sp"
			android:password="true"
			android:layout_marginTop="10dip"
			android:inputType="number"
		 />
		 
		<Button android:text="@string/mainLogin" 
				android:id="@+id/mainLogin" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_marginTop="10sp"></Button>    
    </LinearLayout>
    		    
</RelativeLayout>
